# psrf-chisel

./: .gitignore  .scalafmt.conf  LICENSE  README.md  build.sbt  requirements.txt
attic/main/cpp/: CMakeLists.txt  verilated_vcd_file_rocket.h
attic/main/python/: constants.py  rw_json.py
attic/main/scala/psrf/: DecisionTree.scala  DecisionTreeArray.scala
attic/stash1/main/cpp/: rf_classifier_test_harness_sim.h
attic/stash1/main/python/: rf_train.py
attic/stash2/src/: AXIRandomForest.scala  DecisionTree.scala  IO.scala  MemoryParams.scala  Parameters.scala  RandomForestTile.scala
attic/test/scala/psrf/: TestHarnessSpec.scala  package.scala
config/: README.md  default.json
docs/: TODO.md  arch.txt  build-system.md  config-system.md
docs/presentation/: presentation.org  presentation.tex
docs/schematics/: gen-arch.sh
docs/schematics/DecisionTree/: arch.txt  flow.puml  gen-arch.sh
patch/: 0001-RF-accelerator-installation-for-v1.8.1.patch
sdk/: rf-acc.c  rf-acc.h
sdk/examples/: test.c  trf-acc.c
src/main/cpp/: CMakeLists.txt  rf_classifier_test_harness_sim.cpp  simulator.h
src/main/cpp/.bsp/: sbt.json
src/main/python/: constants.py  main.py  rf_train.py
src/main/scala/psrf/: BuildPipeline.scala  Config.scala  ConfigParser.scala  DecisionTree.scala  DecisionTreeAccelerator.scala  DecisionTreeArray.scala  DspBlocks.scala  Main.scala  MajorityVoter.scala  Node.scala  Parameters.scala  RandomForestClassifier.scala  TestHarness.scala  package.scala
src/test/scala/psrf/: DecisionTreeArraySpec.scala  DecisionTreeSpec.scala  (+4 more)
tests/: decision-tree.c
(+62 files in other folders)
